--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <h1>Movie Trivia Game</h1>
-  <h2>Take your best bet at these random movie trivia true or false questions.</h2>
+  <h2>Take your best guess at these random movie trivia true or false questions.</h2>
   <div><span id="timer"></span></div>
 
   </div>
